update mass scraping notebook

--- a/scraping_intro/scraping_mass_scraping_press-releases.ipynb
+++ b/scraping_intro/scraping_mass_scraping_press-releases.ipynb
@@ -21,7 +21,7 @@
    "id": "6d47307a-0975-4cc1-a35b-d68c2ec77482",
    "metadata": {},
    "source": [
-    "Let us examine the page with press releases: https://www.berlin.de/presse/pressemitteilungen\n",
+    "To study the way Berlin authorities communicate with the public, we can focus on their press-releases. Let us examine the page with press releases: https://www.berlin.de/presse/pressemitteilungen\n",
     "Iа we look at the menu, we'll see that it contains the press-releases of the Berlin authorities since 1993... The links to the pages with press-releases are quite predictable, they just go from page 1 to more than 7000 (the entire number is growing as new releases are being added):  \n",
     "\n",
     "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/2\n",
