--- a/scraping_intro/scraping_mass_scraping_press-releases.ipynb
+++ b/scraping_intro/scraping_mass_scraping_press-releases.ipynb
@@ -5,7 +5,36 @@
    "id": "e169cfbb-5409-4bc0-82db-413343b58e32",
    "metadata": {},
    "source": [
-    "# Mass scraping of press releases"
+    "# 🚀 Mass scraping of press releases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f0fb10a4-c384-4b7e-a956-2fa13cb1a34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 🚀 Install libraries \n",
+    "!pip install requests "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b5c5d7a-f727-4385-8c30-49347b73d692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
    ]
   },
   {
@@ -49,17 +78,27 @@
    "metadata": {},
    "source": [
     "## Generate set of links to all pages containing links to press releases\n",
-    "Let's make a rough estimate at first and simply create 10000 entries. "
+    "Let's make a rough estimate at first and simply create 10000 entries.\n",
+    "\n",
+    "First we will create an empty list:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "aeeafb61-65f1-4e14-9048-66bb6cb9b724",
    "metadata": {},
    "outputs": [],
    "source": [
     "links_to_releases = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23b5c58f-528f-4658-9a5a-68328c96be5b",
+   "metadata": {},
+   "source": [
+    "Then we will iterate over numbers from 1 to 10000, form a link and store it in the list"
    ]
   },
   {
@@ -69,22 +108,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10000):\n",
+    "for i in range(1, 10000):\n",
     "    url = f'https://www.berlin.de/presse/pressemitteilungen/index/index/page/{i}'\n",
     "    links_to_releases.append(url)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "68a133f3-a149-471c-8b10-be7059242e86",
+   "cell_type": "markdown",
+   "id": "0498e217-d32c-4f17-a222-78f2a5419ba5",
    "metadata": {},
+   "source": [
+    "Let us look at the first five entries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "68a133f3-a149-471c-8b10-be7059242e86",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://www.berlin.de/presse/pressemitteilungen/index/index/page/0', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/1', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/2', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/3', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/4']\n"
+      "['https://www.berlin.de/presse/pressemitteilungen/index/index/page/1', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/2', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/3', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/4', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/5']\n"
      ]
     }
    ],
@@ -93,12 +142,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c07a975a-288d-4754-bb71-bb79455ef735",
+   "metadata": {},
+   "source": [
+    "Let us try to access one of them with an HTTP request and see if it returns status code 200:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "86e36fe7-f611-49c5-aea8-554c18bd4ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.berlin.de/presse/pressemitteilungen/index/index/page/4'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links_to_releases[3]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b7a92bc-bfc3-4242-95da-dd44d7c88267",
+   "id": "f77fcb14-4985-4738-ac6a-6f0d7393e561",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "links_to_releases[3]"
+   ]
   },
   {
    "cell_type": "markdown",
