update mass-scraping notebook

--- a/scraping_intro/scraping_mass_scraping_press-releases.ipynb
+++ b/scraping_intro/scraping_mass_scraping_press-releases.ipynb
@@ -9,19 +9,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8db05ff-df64-4e47-aea4-beb1008c13d4",
+   "metadata": {},
+   "source": [
+    "## Hinweise zur Ausführung des Notebooks\n",
+    "Dieses Notebook kann auf unterschiedlichen Levels erarbeitet werden (siehe Abschnitt [\"Technische Voraussetzungen\"](../markdown/introduction_requirements)): \n",
+    "1. Book-Only Mode\n",
+    "2. Cloud Mode: Dafür auf 🚀 klicken und z.B. in Colab ausführen.\n",
+    "3. Local Mode: Dafür auf Herunterladen ↓ klicken und \".ipynb\" wählen. \n",
+    "\n",
+    "## Übersicht\n",
+    "\n",
+    "Im Folgenden werden alle Pressemitteilungen der Berliner Staatskanzlei gescraped\n",
+    "\n",
+    "Dafür werden folgendene Schritte durchgeführt:\n",
+    "1. Zugriff auf eine Webseite über HTTP-Aufruf mithilfe der„requests“-Bibliothek\n",
+    "2. Abruf des HTML-Codes der Webseite aus der HTTP-Antwort.\n",
+    "3. Extrahierung des gesamten sichtbaren Textes von der Webseite aus dem HTML-Code."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f0fb10a4-c384-4b7e-a956-2fa13cb1a34c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: command not found: pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 🚀 Install libraries \n",
     "!pip install requests "
@@ -85,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aeeafb61-65f1-4e14-9048-66bb6cb9b724",
    "metadata": {},
    "outputs": [],
@@ -103,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f2440128-21c6-4a7e-8130-c8cb09a91d78",
    "metadata": {},
    "outputs": [],
@@ -123,20 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "68a133f3-a149-471c-8b10-be7059242e86",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['https://www.berlin.de/presse/pressemitteilungen/index/index/page/1', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/2', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/3', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/4', 'https://www.berlin.de/presse/pressemitteilungen/index/index/page/5']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(links_to_releases[:5])"
    ]
@@ -151,21 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "86e36fe7-f611-49c5-aea8-554c18bd4ab3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.berlin.de/presse/pressemitteilungen/index/index/page/4'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "links_to_releases[3]"
    ]
