research-question_research-question rewritten

--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,55 @@
 ---
 ---
+
+@collection{maas_handbuch_2019,
+	location = {[Berlin]},
+	title = {Handbuch Barrierefreie Kommunikation},
+	series = {Kommunikation - Partizipation - Inklusion},
+	number = {3},
+	publisher = {Frank \& Timme},
+	editor = {Maaß, Christiane and Rink, Isabel},
+	urldate = {2025-04-29},
+	date = {2019},
+}
+
+@book{netzwerk_leichte_sprache_leichte_2014,
+	location = {Berlin},
+	title = {Leichte Sprache: ein Ratgeber},
+	url = {https://www.bmas.de/SharedDocs/Downloads/DE/Publikationen/a752-ratgeber-leichte-sprache.pdf},
+	shorttitle = {Leichte Sprache},
+	pagetotal = {126},
+	publisher = {Bundesministerium für Arbeit u. Soziales},
+	author = {{Netzwerk Leichte Sprache}},
+	date = {2014},
+}
+
+@collection{maas_ratgeber_2016,
+	location = {Berlin},
+	title = {Ratgeber Leichte Sprache: die wichtigsten Regeln und Empfehlungen für die Praxis},
+	isbn = {978-3-411-91236-0},
+	series = {Sprache im Blick},
+	shorttitle = {Ratgeber Leichte Sprache},
+	publisher = {Dudenverlag},
+	editor = {Maaß, Christiane},
+	urldate = {2025-04-29},
+	date = {2016},
+}
+
+@incollection{maas_leichte_2019,
+	location = {[Berlin]},
+	title = {Leichte Sprache},
+	isbn = {978-3-7329-9235-5},
+	series = {Kommunikation - Partizipation - Inklusion},
+	pages = {251--272},
+	number = {3},
+	booktitle = {Handbuch Barrierefreie Kommunikation},
+	publisher = {Frank \& Timme},
+	author = {Bredel, Ursula and Burkart, Christine},
+	editor = {Maaß, Christiane and Rink, Isabel},
+	date = {2019},
+}
+
+
 @article{executable_books_community_2021_2561065,
   author       = {Executable Books Community},
   title        = {Jupyter Book},
