--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,8 @@
 ---
 ---
 
-@collection{maas_handbuch_2019,
-	location = {[Berlin]},
+@book{maas_handbuch_2019,
+	location = {Berlin},
 	title = {Handbuch Barrierefreie Kommunikation},
 	series = {Kommunikation - Partizipation - Inklusion},
 	number = {3},
@@ -23,7 +23,7 @@
 	date = {2014},
 }
 
-@collection{maas_ratgeber_2016,
+@book{maas_ratgeber_2016,
 	location = {Berlin},
 	title = {Ratgeber Leichte Sprache: die wichtigsten Regeln und Empfehlungen für die Praxis},
 	isbn = {978-3-411-91236-0},
