move scraping notebook acc to new structure

--- a/corpus_building/scraping_mass_scraping_press-releases.ipynb
+++ b/corpus_building/scraping_mass_scraping_press-releases.ipynb
@@ -24,9 +24,9 @@
     "Im Folgenden werden alle Pressemitteilungen der Berliner Staatskanzlei gescraped\n",
     "\n",
     "Dafür werden folgendene Schritte durchgeführt:\n",
-    "1. Zugriff auf eine Webseite über HTTP-Aufruf mithilfe der„requests“-Bibliothek\n",
-    "2. Abruf des HTML-Codes der Webseite aus der HTTP-Antwort.\n",
-    "3. Extrahierung des gesamten sichtbaren Textes von der Webseite aus dem HTML-Code."
+    "1. Wir werden die Struktur des Teils der Website untersuchen, der alle Pressemitteilungen enthält.\n",
+    "2. Wir werden die URL-Links zu allen Pressemitteilungen abrufen.\n",
+    "3. Abschließend werden wir alle Pressemitteilungen scrapen."
    ]
   },
   {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86165120-b9ae-49a7-87d9-60caba81d9ef",
+   "id": "37ba8995-0539-4287-84ff-38da1ecdc606",
    "metadata": {},
    "outputs": [],
    "source": []
