rename notebook properly

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -5,7 +5,7 @@
    "id": "e169cfbb-5409-4bc0-82db-413343b58e32",
    "metadata": {},
    "source": [
-    "# 🚀 Mass scraping of press releases"
+    "# 🚀 Massenscraping von Pressemitteilungen"
    ]
   },
   {
