add intro to mass scraping

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -55,26 +55,31 @@
    "id": "2a371973-de38-4439-8878-86b31954abea",
    "metadata": {},
    "source": [
-    "## Analyze the press releases start page"
+    "## Retrieve and inspect the press releases search page"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d47307a-0975-4cc1-a35b-d68c2ec77482",
+   "id": "6b470b17-54f4-4ae5-8d97-581780c8b86b",
    "metadata": {},
    "source": [
-    "To study the way Berlin authorities communicate with the public, we can focus on their press-releases. Let us examine the page with press releases: https://www.berlin.de/presse/pressemitteilungen\n",
-    "Iа we look at the menu, we'll see that it contains the press-releases of the Berlin authorities since 1993... The links to the pages with press-releases are quite predictable, they just go from page 1 to more than 7000 (the entire number is growing as new releases are being added):  \n",
+    "In the chapter ['Aufbau des Forschungskorpus'](../corpus_collection/corpus-collection_building-our-corpus.html#aufbau-des-forschungskorpus) we have outlined the selection & filtering process for our corpus of press releases. Now it is time to imlement scraping of tha corpus using scraping tools and knowledge of HTML. \n",
     "\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/2\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/3\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/4\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/5\n",
-    "* ...\n",
-    "* ...\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7193\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7194\n",
-    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7195\n"
+    "1. We already know that the Search mechanism on the Berlin.de website allows to select only the departments that interest us:\n",
+    "   \n",
+    "![selection](../book_images/selection_of_depts.png)\n",
+    "\n",
+    "2. After that we can perform search with an empty query and retrieve all press releases belonging to these departments:\n",
+    "\n",
+    "![suchergebnisse](../book_images/suchergebnisse.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd435155-4cbf-456d-b39e-955b99b362e8",
+   "metadata": {},
+   "source": [
+    "We can see that the links here are stored in a table. In HTML a table is encoded with the `<table>` element. If we look at the source code of this page, we can find that the page contains one table with all the links:"
    ]
   },
   {
@@ -189,6 +194,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d47307a-0975-4cc1-a35b-d68c2ec77482",
+   "metadata": {},
+   "source": [
+    "To study the way Berlin authorities communicate with the public, we can focus on their press-releases. Let us examine the page with press releases: https://www.berlin.de/presse/pressemitteilungen\n",
+    "Iа we look at the menu, we'll see that it contains the press-releases of the Berlin authorities since 1993... The links to the pages with press-releases are quite predictable, they just go from page 1 to more than 7000 (the entire number is growing as new releases are being added):  \n",
+    "\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/2\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/3\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/4\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/5\n",
+    "* ...\n",
+    "* ...\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7193\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7194\n",
+    "* https://www.berlin.de/presse/pressemitteilungen/index/index/page/7195\n"
+   ]
   }
  ],
  "metadata": {
