--- a/references.bib
+++ b/references.bib
@@ -9,7 +9,7 @@
 	publisher = {Frank \& Timme},
 	editor = {Maaß, Christiane and Rink, Isabel},
 	urldate = {2025-04-29},
-	date = {2019},
+	year = {2019},
 }
 
 @book{netzwerk_leichte_sprache_leichte_2014,
@@ -20,7 +20,7 @@
 	pagetotal = {126},
 	publisher = {Bundesministerium für Arbeit u. Soziales},
 	author = {{Netzwerk Leichte Sprache}},
-	date = {2014},
+	year = {2014},
 }
 
 @book{maas_ratgeber_2016,
@@ -32,7 +32,7 @@
 	publisher = {Dudenverlag},
 	editor = {Maaß, Christiane},
 	urldate = {2025-04-29},
-	date = {2016},
+	year = {2016},
 }
 
 @incollection{maas_leichte_2019,
@@ -46,7 +46,7 @@
 	publisher = {Frank \& Timme},
 	author = {Bredel, Ursula and Burkart, Christine},
 	editor = {Maaß, Christiane and Rink, Isabel},
-	date = {2019},
+	year = {2019},
 }
 
 
