--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@book{dubay_principles_2004,
+	location = {Costa Mesa},
+	title = {The Principles of Readability},
+	url = {https://files.eric.ed.gov/fulltext/ED490073.pdf},
+	publisher = {Impact Information},
+	author = {{DuBay}, William H.},
+	urldate = {2025-05-16},
+	date = {2004},
+}
 
 @book{maas_handbuch_2019,
 	location = {Berlin},
