--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,17 @@
 ---
 ---
+@article{krautter_operationalisierung_2023,
+	title = {Operationalisierung},
+	rights = {Creative Commons Attribution Share Alike 4.0 International},
+	doi = {10.17175/WP_2023_010},
+	journal = {Zeitschrift für digitale Geisteswissenschaften – {ZfdG}},
+	author = {Krautter, Benjamin and Pichler, Axel and Reiter, Nils},
+	date = {2023-06-21},
+	langid = {german},
+	note = {Working Paper 2 der Zeitschrift für digitale Geisteswissenschaften},
+	year = "2023",
+}
+
 @book{dubay_principles_2004,
 	location = {Costa Mesa},
 	title = {The Principles of Readability},
