--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,18 @@
 ---
 ---
+@article{heuser_learning_2011,
+	title = {Learning to Read Data: Bringing out the Humanistic in the Digital Humanities},
+	volume = {54},
+	issn = {0042-5222},
+	doi = {10.2979/victorianstudies.54.1.79},
+	shorttitle = {Learning to Read Data},
+	pages = {79--86},
+	number = {1},
+	journaltitle = {Victorian Studies},
+	author = {Heuser, Ryan and Le-Khac, Long},
+	date = {2011},
+}
+
 @article{krautter_operationalisierung_2023,
 	title = {Operationalisierung},
 	rights = {Creative Commons Attribution Share Alike 4.0 International},
