--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -65,11 +65,11 @@
    "source": [
     "In the chapter ['Aufbau des Forschungskorpus'](../corpus_collection/corpus-collection_building-our-corpus.html#aufbau-des-forschungskorpus) we have outlined the selection & filtering process for our corpus of press releases. Now it is time to imlement scraping of tha corpus using scraping tools and knowledge of HTML. \n",
     "\n",
-    "1. We already know that the Search mechanism on the Berlin.de website allows to select only the departments that interest us:\n",
+    "1. We already know that the [Search menu](https://www.berlin.de/presse/pressemitteilungen/index/search) on the Berlin.de website allows to select only the departments that interest us:\n",
     "   \n",
     "![selection](../book_images/selection_of_depts.png)\n",
     "\n",
-    "2. After that we can perform search with an empty query and retrieve all press releases belonging to these departments:\n",
+    "2. After that we can [perform search with selected depatrmentes and an empty query](https://www.berlin.de/presse/pressemitteilungen/index/search?searchtext=&boolean=0&startdate=&enddate=&alle-senatsverwaltungen=on&institutions%5B%5D=Presse-+und+Informationsamt+des+Landes+Berlin&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Bildung%2C+Jugend+und+Familie&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Finanzen&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Inneres+und+Sport&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Arbeit%2C+Soziales%2C+Gleichstellung%2C+Integration%2C+Vielfalt+und+Antidiskriminierung&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Justiz+und+Verbraucherschutz&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Kultur+und+Gesellschaftlichen+Zusammenhalt&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Stadtentwicklung%2C+Bauen+und+Wohnen&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Mobilit%C3%A4t%2C+Verkehr%2C+Klimaschutz+und+Umwelt&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Wirtschaft%2C+Energie+und+Betriebe&institutions%5B%5D=Senatsverwaltung+f%C3%BCr+Wissenschaft%2C+Gesundheit+und+Pflege&alle-bezirksamt=on&institutions%5B%5D=Bezirksamt+Charlottenburg-Wilmersdorf&institutions%5B%5D=Bezirksamt+Friedrichshain-Kreuzberg&institutions%5B%5D=Bezirksamt+Lichtenberg&institutions%5B%5D=Bezirksamt+Marzahn-Hellersdorf&institutions%5B%5D=Bezirksamt+Mitte&institutions%5B%5D=Bezirksamt+Neuk%C3%B6lln&institutions%5B%5D=Bezirksamt+Pankow&institutions%5B%5D=Bezirksamt+Reinickendorf&institutions%5B%5D=Bezirksamt+Spandau&institutions%5B%5D=Bezirksamt+Steglitz-Zehlendorf&institutions%5B%5D=Bezirksamt+Tempelhof-Sch%C3%B6neberg&institutions%5B%5D=Bezirksamt+Treptow-K%C3%B6penick&alle-landesbeauftragte=on&institutions%5B%5D=Beauftragte+des+Senats+f%C3%BCr+Integration+und+Migration&institutions%5B%5D=Beauftragter+zur+Aufarbeitung+der+SED-Diktatur&institutions%5B%5D=B%C3%BCrger-+und+Polizeibeauftragter+des+Landes+Berlin&institutions%5B%5D=Pflegebeauftragte+des+Landes+Berlin&institutions%5B%5D=Landestierschutzbeauftragte&institutions%5B%5D=Landeswahlleitung&bt=#searchresults) and retrieve all press releases belonging to these departments:\n",
     "\n",
     "![suchergebnisse](../book_images/suchergebnisse.png)"
    ]
@@ -79,7 +79,97 @@
    "id": "cd435155-4cbf-456d-b39e-955b99b362e8",
    "metadata": {},
    "source": [
-    "We can see that the links here are stored in a table. In HTML a table is encoded with the `<table>` element. If we look at the source code of this page, we can find that the page contains one table with all the links:"
+    "We can see that the links here are stored in a table. In HTML a table is encoded with the `<table>` element. If we look at the source code of this page, we can find that the page contains one table with all the links:\n",
+    "\n",
+    "```\n",
+    "<table id=\"boArticles\" border=\"0\" class=\"table table-striped table-bordered\">\n",
+    "            <thead>\n",
+    "                <tr>\n",
+    "\t<th class=\"w10 align_left table_sort DESC\">\n",
+    "\t\tDatum\n",
+    "\t</th>\n",
+    "\t<th class=\"align_left table_sort \">\n",
+    "\t\tTitel der Pressemitteilung\n",
+    "\t</th>\n",
+    "\t<th class=\"w25 align_left table_sort \">\n",
+    "\t\tBehörden\n",
+    "\t</th>\n",
+    "                </tr>\n",
+    "            </thead>\n",
+    "            <tbody>\n",
+    "                \t\t<tr class=\"odd\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/sen/kultgz/aktuelles/pressemitteilungen/2025/pressemitteilung.1561101.php\">Einzelprojekt-, Einstiegs- und einjährige Förderung für Produktionsorte für das Jahr 2026</a></td>\n",
+    "            <td>Senatsverwaltung für Kultur und Gesellschaftlichen Zusammenhalt            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"even\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-charlottenburg-wilmersdorf/aktuelles/pressemitteilungen/2025/pressemitteilung.1561098.php\">Musikschule City West: Neue Servicezeiten und verbesserte Erreichbarkeit</a></td>\n",
+    "            <td>Bezirksamt Charlottenburg-Wilmersdorf            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"odd\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-neukoelln/aktuelles/pressemitteilungen/2025/pressemitteilung.1561090.php\">Neue Neukölln-Kampagne: Jenseits von Schlagzeilen</a></td>\n",
+    "            <td>Bezirksamt Neukölln            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"even\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-charlottenburg-wilmersdorf/aktuelles/pressemitteilungen/2025/pressemitteilung.1561082.php\">40 Jahre Städtepartnerschaft: Karmiels Bürgermeister zu Besuch in Charlottenburg-Wilmersdorf</a></td>\n",
+    "            <td>Bezirksamt Charlottenburg-Wilmersdorf            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"odd\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-tempelhof-schoeneberg/aktuelles/pressemitteilungen/2025/pressemitteilung.1561027.php\">Aktionstag Ausbildung „Mach dein Ding 2025“</a></td>\n",
+    "            <td>Bezirksamt Tempelhof-Schöneberg            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"even\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-spandau/aktuelles/pressemitteilungen/2025/pressemitteilung.1561046.php\">Festakt in der Siegerland-Grundschule: Feierlicher Abschluss der energetischen Gesamtsanierung</a></td>\n",
+    "            <td>Bezirksamt Spandau            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"odd\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-tempelhof-schoeneberg/aktuelles/pressemitteilungen/2025/pressemitteilung.1560980.php\">Neue Sonderausstellung am Informationsort Schwerbelastungskörper</a></td>\n",
+    "            <td>Bezirksamt Tempelhof-Schöneberg            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"even\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-mitte/aktuelles/pressemitteilungen/2025/pressemitteilung.1561007.php\">Ausstellungseröffnung „Wege des Erinnerns“ und „KaKaKaTi Nno Munange“ in der Galerie Wedding</a></td>\n",
+    "            <td>Bezirksamt Mitte            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"odd\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-treptow-koepenick/aktuelles/pressemitteilungen/2025/pressemitteilung.1560793.php\">Offene Ateliers in Berlin-Friedrichshagen</a></td>\n",
+    "            <td>Bezirksamt Treptow-Köpenick            </td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr class=\"even last\">\n",
+    "\t\t\t<td>\n",
+    "19.05.2025</td>\n",
+    "            <td><a href=\"/ba-steglitz-zehlendorf/aktuelles/pressemitteilungen/2025/pressemitteilung.1560936.php\">Einladung zur 33. Sitzung der Seniorenvertretung Steglitz-Zehlendorf am 27.05.2025</a></td>\n",
+    "            <td>Bezirksamt Steglitz-Zehlendorf            </td>\n",
+    "\t\t</tr>\n",
+    "            </tbody>\n",
+    "        </table>\n",
+    "```\n",
+    "\n",
+    "To crawl these links we could use the basic HTML querying machinery of the BeautifulSoup library that we've already seen. We will do it in the next section:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd62da74-4319-486d-adee-9058dbc9f495",
+   "metadata": {},
+   "source": [
+    "## Parse search output for links (on one page): "
    ]
   },
   {
