replace bulky HTML code pasta with a more readable & self-explainatory picture

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -81,85 +81,7 @@
    "source": [
     "We can see that the links here are stored in a table. In HTML a table is encoded with the `<table>` element. If we look at the source code of this page, we can find that the page contains one table with all the links:\n",
     "\n",
-    "```\n",
-    "<table id=\"boArticles\" border=\"0\" class=\"table table-striped table-bordered\">\n",
-    "            <thead>\n",
-    "                <tr>\n",
-    "\t<th class=\"w10 align_left table_sort DESC\">\n",
-    "\t\tDatum\n",
-    "\t</th>\n",
-    "\t<th class=\"align_left table_sort \">\n",
-    "\t\tTitel der Pressemitteilung\n",
-    "\t</th>\n",
-    "\t<th class=\"w25 align_left table_sort \">\n",
-    "\t\tBehörden\n",
-    "\t</th>\n",
-    "                </tr>\n",
-    "            </thead>\n",
-    "            <tbody>\n",
-    "                \t\t<tr class=\"odd\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/sen/kultgz/aktuelles/pressemitteilungen/2025/pressemitteilung.1561101.php\">Einzelprojekt-, Einstiegs- und einjährige Förderung für Produktionsorte für das Jahr 2026</a></td>\n",
-    "            <td>Senatsverwaltung für Kultur und Gesellschaftlichen Zusammenhalt            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"even\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-charlottenburg-wilmersdorf/aktuelles/pressemitteilungen/2025/pressemitteilung.1561098.php\">Musikschule City West: Neue Servicezeiten und verbesserte Erreichbarkeit</a></td>\n",
-    "            <td>Bezirksamt Charlottenburg-Wilmersdorf            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"odd\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-neukoelln/aktuelles/pressemitteilungen/2025/pressemitteilung.1561090.php\">Neue Neukölln-Kampagne: Jenseits von Schlagzeilen</a></td>\n",
-    "            <td>Bezirksamt Neukölln            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"even\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-charlottenburg-wilmersdorf/aktuelles/pressemitteilungen/2025/pressemitteilung.1561082.php\">40 Jahre Städtepartnerschaft: Karmiels Bürgermeister zu Besuch in Charlottenburg-Wilmersdorf</a></td>\n",
-    "            <td>Bezirksamt Charlottenburg-Wilmersdorf            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"odd\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-tempelhof-schoeneberg/aktuelles/pressemitteilungen/2025/pressemitteilung.1561027.php\">Aktionstag Ausbildung „Mach dein Ding 2025“</a></td>\n",
-    "            <td>Bezirksamt Tempelhof-Schöneberg            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"even\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-spandau/aktuelles/pressemitteilungen/2025/pressemitteilung.1561046.php\">Festakt in der Siegerland-Grundschule: Feierlicher Abschluss der energetischen Gesamtsanierung</a></td>\n",
-    "            <td>Bezirksamt Spandau            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"odd\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-tempelhof-schoeneberg/aktuelles/pressemitteilungen/2025/pressemitteilung.1560980.php\">Neue Sonderausstellung am Informationsort Schwerbelastungskörper</a></td>\n",
-    "            <td>Bezirksamt Tempelhof-Schöneberg            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"even\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-mitte/aktuelles/pressemitteilungen/2025/pressemitteilung.1561007.php\">Ausstellungseröffnung „Wege des Erinnerns“ und „KaKaKaTi Nno Munange“ in der Galerie Wedding</a></td>\n",
-    "            <td>Bezirksamt Mitte            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"odd\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-treptow-koepenick/aktuelles/pressemitteilungen/2025/pressemitteilung.1560793.php\">Offene Ateliers in Berlin-Friedrichshagen</a></td>\n",
-    "            <td>Bezirksamt Treptow-Köpenick            </td>\n",
-    "\t\t</tr>\n",
-    "\t\t<tr class=\"even last\">\n",
-    "\t\t\t<td>\n",
-    "19.05.2025</td>\n",
-    "            <td><a href=\"/ba-steglitz-zehlendorf/aktuelles/pressemitteilungen/2025/pressemitteilung.1560936.php\">Einladung zur 33. Sitzung der Seniorenvertretung Steglitz-Zehlendorf am 27.05.2025</a></td>\n",
-    "            <td>Bezirksamt Steglitz-Zehlendorf            </td>\n",
-    "\t\t</tr>\n",
-    "            </tbody>\n",
-    "        </table>\n",
-    "```\n",
+    "![selection](../book_images/pm_table_source_html.png) \n",
     "\n",
     "To crawl these links we could use the basic HTML querying machinery of the BeautifulSoup library that we've already seen. We will do it in the next section:"
    ]
@@ -176,8 +98,14 @@
    "cell_type": "markdown",
    "id": "39f14d7a-450f-4dac-95d6-457d668d2b4b",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173722f1-857d-4173-835f-cf311d8b03a9",
+   "metadata": {},
    "source": [
-    "This means that to generate this links all we need is to iterate over numbers. "
+    "## End of the updated version"
    ]
   },
   {
@@ -186,6 +114,7 @@
    "metadata": {},
    "source": [
     "## Generate set of links to all pages containing links to press releases\n",
+    "This means that to generate this links all we need is to iterate over numbers. \n",
     "Let's make a rough estimate at first and simply create 10000 entries.\n",
     "\n",
     "First we will create an empty list:"
